k8s/networkpolicy/00-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: tunefy-dev
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
