k8s/networkpolicy/04-backend-to-postgresql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: be-to-pg
  namespace: tunefy-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: backend
    ports:
    - protocol: TCP
      port: 5432
